	* Replace --enable-library-coverage with --enable-coverage, which
	enables program coverage for all components (#1945).
	* Suggest that `ExitFailure 9` is probably due to memory
	exhaustion (#1522).
	* Drop support for Haddock < 2.0 (#1808, #1718).
	* Make 'cabal test'/'cabal bench' build only what's needed for
	running tests/benchmarks (#1821).

1.20.0.1 Johan Tibell <johan.tibell@gmail.com> May 2014
	* Fix streaming test output.

1.20.0.0 Johan Tibell <johan.tibell@gmail.com> April 2014
	* Rewrite user guide
	* Fix repl Ctrl+C handling
	* Add haskell-suite compiler support
	* Add __HADDOCK_VERSION__ define
	* Allow specifying exact dependency version using hash
	* Rename extra-html-files to extra-doc-files
	* Add parallel build support for GHC 7.8 and later
	* Don't call ranlib on OS X
	* Avoid re-linking executables, test suites, and benchmarks
	unnecessarily, shortening build times
	* Add --allow-newer which allows upper version bounds to be
	ignored
	* Add --enable-library-stripping
	* Add command for freezing dependencies
	* Allow repl to be used outside Cabal packages
	* Add --require-sandbox
	* Don't use --strip-unneeded on OS X or iOS
	* Add new license-files field got additional licenses
	* Fix if(solaris) on some Solaris versions
	* Don't use -dylib-install-name on OS X with GHC > 7.8
	* Add DragonFly as a known OS
	* Improve pretty-printing of Cabal files
	* Add test flag --show-details=streaming for real-time test output
	* Add exec command

1.10.2.0 Duncan Coutts <duncan@community.haskell.org> June 2011
	* Include test suites in cabal sdist
	* Fix for conditionals in test suite stanzas in .cabal files
	* Fix permissions of directories created during install
	* Fix for global builds when $HOME env var is not set

1.10.1.0 Duncan Coutts <duncan@community.haskell.org> February 2011
	* Improved error messages when test suites are not enabled
	* Template parameters allowed in test --test-option(s) flag
	* Improved documentation of the test feature